# Congealing

./: CMakeLists.txt  Makefile  README  README.md  doc
src/: CMakeLists.txt  CongealGroup.h  CongealGroupPhased.h  CongealRecipieOutput.h  Doxyfile  HashTable.h  Image.h  Makefile  Makefile.lovasz  PaddedImage.h  Pixels.h  Point.h  Point2D.h  Point3D.h  Promotion.h  README.md  Recipie.h  Registry.h  Source.h  SourceAccessor.h  SourceAccessorAperature.h  SourceAccessorConvolution.h  SourceAccessorCubicInterpolate.h  SourceAccessorDistributionField.h  SourceAccessorEdgePad.h  SourceAccessorEqualize.h  SourceAccessorLinearInterpolate.h  SourceAccessorNearestNeighbor.h  SourceAccessorPointwiseOperator.h  SourceAccessorRangeScale.h  SourceAccessorSlice.h  SourceCombine.h  SourceCombineLayout.h  SourceCombinePointwiseOperator.h  SourceGenerics.h  SourceMaskCombine.h  SourceMaskCombinePointwiseOperator.h  SourceMaskCombineSelect.h  SourceMemory.h  SourceMixed.h  (+50 more)
src/doc/html/: CongealGroupPhased_8h.html  CongealGroupPhased_8h_source.html  CongealGroup_8h.html  CongealGroup_8h_source.html  CongealRecipieOutput_8h.html  CongealRecipieOutput_8h_source.html  HashTable_8h.html  HashTable_8h_source.html  Image_8h.html  Image_8h_source.html  PaddedImage_8h.html  PaddedImage_8h_source.html  Pixels_8h.html  Pixels_8h_source.html  Point2D_8h.html  Point2D_8h_source.html  Point3D_8h.html  Point3D_8h_source.html  Point_8h.html  Point_8h_source.html  Promotion_8h.html  Promotion_8h_source.html  Recipie_8h.html  Recipie_8h_source.html  Registry_8h.html  Registry_8h_source.html  SourceAccessorAperature_8h.html  SourceAccessorAperature_8h_source.html  SourceAccessorConvolution_8h.html  SourceAccessorConvolution_8h_source.html  SourceAccessorCubicInterpolate_8h.html  SourceAccessorCubicInterpolate_8h_source.html  SourceAccessorDistributionField_8h.html  SourceAccessorDistributionField_8h_source.html  SourceAccessorEdgePad_8h.html  SourceAccessorEdgePad_8h_source.html  SourceAccessorEqualize_8h.html  SourceAccessorEqualize_8h_source.html  SourceAccessorLinearInterpolate_8h.html  SourceAccessorLinearInterpolate_8h_source.html  (+525 more)
src/doc/html/search/: all_24.html  all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_79.html  all_7a.html  all_7e.html  classes_62.html  classes_63.html  classes_64.html  classes_68.html  classes_69.html  classes_6e.html  classes_6f.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  classes_76.html  classes_77.html  (+90 more)
